--- a/6.Conclusions_and_future_scope.tex
+++ b/6.Conclusions_and_future_scope.tex
@@ -5,14 +5,14 @@ This chapter provides a concise description of the achieved results in the previ
 \section{Summary}
 The thesis tackles the research problems identified in Chapter \ref{1} related to the need for large scale offshore networks with the available technology and provides solutions to mitigate technical challenges related to voltage and frequency control while developing large scale offshore networks.
 
-From literature, it is seen that the current state-of-the-art technology, \gls{MMC}-\gls{HVDC} transmission, for transferring offshore wind power is limited to a maximum capacity of 1.2 GW \cite{peralta2012detailed}. Hence, a configuration for a large scale network (greater than or equal 2 GW) with the available technology is currently lacking. It is expected that the upcoming \gls{OWF} projects will be utilizing 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station due to their significant advantages over the conventional combination of 33 kV and 145 kV \cite{dnv66kv}. Moreover, the technical challenges related to voltage and frequency control in islanding of \gls{OWF}s is not full filled in real-time application and lacks the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions \cite{sethi_real-time_nodate-new}.
+From literature, it is seen that the current state-of-the-art technology, \gls{MMC}-\gls{HVDC} transmission, for transferring offshore wind power is limited to a maximum capacity of 1.2 GW \cite{peralta2012detailed}. Hence, a configuration for a large scale offshore network (greater than or equal to 2 GW) with the available technology is currently lacking. It is expected that the upcoming \gls{OWF} projects will be utilizing 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station due to their significant advantages over the conventional combination of 33 kV and 145 kV \cite{dnv66kv}. Moreover, the technical challenges related to voltage and frequency control in islanding of \gls{OWF}s is not full filled in real-time application and lacks the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions \cite{sethi_real-time_nodate-new}.
 
-The thesis adapts the latest trend in technology and overcomes the above mentioned research gaps by achieving the overall goal of developing a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network in RSCAD and performing analysis on the dynamics of voltage and power at various locations in the network. The digital twin model developed in this thesis adapts a hybrid configuration with two \gls{MMC}s working in parallel and connecting four \gls{OWF}s to the onshore system. The chosen configuration is a modified layout of the hub-and-spoke in \cite{abb_hvdc_2018} and such a network is currently unavailable in existing literature. Additionally, the technical challenges faced while using conventional current control strategies in \gls{WG}s related to voltage and frequency control are identified in the literature and are mitigated by implementing a new control strategy, \gls{DVC}, in all the four \gls{WG}s in RSCAD for real-time application. 
+This thesis adapts the latest trend in technology and overcomes the above mentioned research gaps by achieving the overall goal of developing a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network in RSCAD and performing analysis on the dynamics of voltage and power at various locations in the network. The digital twin model developed in this thesis adapts a hybrid configuration with two \gls{MMC}s working in parallel and connecting four \gls{OWF}s to the onshore system. The layout adapted for the 2 GW offshore network is achieved by modifying the layout of the hub-and-spoke principle in \cite{abb_hvdc_2018}. Additionally, the technical challenges faced while using conventional current control strategies in \gls{WG}s related to voltage and frequency control, are mitigated by implementing a new control strategy, \gls{DVC}, in all the four \gls{WG}s in RSCAD for real-time application. 
 
 To achieve the overall goal, initially, the \gls{DVC} is implemented for real-time application in RSCAD for one set of \gls{OWF} connected to a 66 kV \gls{HVAC} network. The large scale 2 GW offshore network is developed by modularly connecting four sets of the aforementioned single \gls{OWF} model in parallel. The 2 GW offshore wind power is transferred to the onshore network through two parallel connected \gls{MMC}s. The key features of the model include- all the \gls{WG}s are equipped with \gls{DVC}, one \gls{MMC} working in grid forming control and the other working in grid following control. Such a model is unique because it incorporates a hybrid layout that allows for the coordination of the above mentioned strategies during steady state and dynamic conditions in the network.    
 
 
-Few significant results of the model include the achievement of short-term voltage stability in the network during severe dynamic scenarios, the requirement of reactive current injection by \gls{WG}s during islanding by performing three-phase fault analysis. These results confirm the stable operation of the network under severe dynamic scenarios and the corresponding controller models can be utilized for further advancements on the size of the large scale network.  
+Few significant results of the model include the achievement of short-term voltage stability in the network during severe dynamic scenarios, the requirement of reactive current injection by \gls{WG}s during islanding by performing three-phase fault analysis. These results confirm the stable operation of the network under severe dynamic scenarios and the corresponding network model can be utilized for further advancements on the size of the offshore network.  
 
 % The voltage stability and power flow in the network during severe dynamic conditions such as disconnection of one set of \gls{OWF} and a three-phase line to ground fault in the middle of an \gls{HVAC} cable, The \gls{DVC} implemented in Type-4 \gls{WG}s    
 
@@ -35,26 +35,27 @@ Few significant results of the model include the achievement of short-term volta
 \vspace{2mm}
 \paragraph{\textcolor{blue}{Research Question 1 : How effective is the \gls{DVC} when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?}}
 
-\paragraph{} The modelling of \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid through 66 kV \gls{HVAC} cables in RSCAD is explained in Chapter \ref{3}. The performance of the implemented \gls{DVC} is tested for severe disturbances in the grid. The event three-phase line to ground short circuit in the middle of the \gls{HVAC} cable is chosen for analysis. The \gls{DVC} provides voltage control and effectively stabilizes the system during such severe disturbances when connected to a 66 kV infinite grid. In terms of reactive current injection during a three-phase line to ground fault in the middle of the cable, the \gls{DVC} shows the required performance by providing active current priority during steady state conditions and reactive current priority during dynamic conditions. Such a strategy provides control of voltage directly (when compared to indirect control of voltage in conventional current control) and avoids the need of an external control to be acted upon during dynamic conditions such as an FRT controller. 
+\paragraph{} As the upcoming projects are expected to have 66 kV \gls{HVAC} transmission from \gls{OWF} to the offshore converter station, the \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid, is modelled for a 66 kV offshore network in RSCAD. The performance of \gls{DVC} is tested for the most severe disturbance i.e. the three-phase fault. The three-phase line to ground fault is implemented in the middle of the 66 kV \gls{HVAC} cable. On viewing the voltage profile at the \gls{PCC} following the fault, it is observed that \gls{DVC} provides a stable operation in terms of short-term voltage stability. In terms of reactive current injection, the \gls{DVC} provides active current priority during steady state conditions and reactive current priority during the time of fault which is a significant requirement by most of the grid codes. Additionally, the indirect control of voltage in conventional current control requires a FRT controller to force reactive current injection during the time of fault. However, such an external control is not required in \gls{DVC} wherein the voltage of \gls{GSC} is controlled directly. 
 
 \paragraph{\textcolor{blue}{Research Question 2 : What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar system modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?}}
 
-\paragraph{} The performance of the implemented \gls{DVC} in a average model Type-4 \gls{WG} in RSCAD for a 66 kV network is compared with the benchmark \gls{DVC} for a simplified Type-4 \gls{WG} model in PowerFactory for a similar 66 kV network in terms of short-term voltage stability and reactive current injection during severe disturbances in the network. A three-phase fault event in the middle of the \gls{HVAC} cable is simulated in both the models in \gls{EMT} platforms. The voltage and currents profiles are compared and found to be similar for both the models following the three-phase line to ground fault. This shows the validation of the \gls{DVC} implemented in the average model of the Type-4 \gls{WG} in RSCAD and hence can be further utilized for future research works. The results obtained for the 66 kV \gls{HVAC} network are in line with the findings from previous studies with \gls{DVC} for \gls{WG}s connected to 33 kV \gls{HVAC} network as in \cite{korai_dynamic_2019} and \cite{sethi_real-time_nodate-new}. The usage of the RSCAD model also allows for real time environment application.    
+\paragraph{} The performance of the implemented \gls{DVC} in a average model of Type-4 \gls{WG} in RSCAD for a 66 kV \gls{HVAC} network is compared with the benchmark \gls{DVC} for a simplified Type-4 \gls{WG} model in PowerFactory for a similar 66 kV \gls{HVAC} network in terms of short-term voltage stability and reactive current injection following a three-phase fault in the network. A three-phase fault event in the middle of the \gls{HVAC} cable is simulated in both the models in \gls{EMT} platforms. The voltage and current profiles are compared and found to have good correspondence following the three-phase line to ground fault. This shows the validation of the \gls{DVC} implemented in the average model of the Type-4 \gls{WG} for a 66 kV \gls{HVAC} offshore network in RSCAD. Moreover, the model developed in RSCAD provides accurate results for the real-time application of the implemented \gls{DVC} and can be used as a reference model since it provides a detailed representation of the Type-4 \gls{WG} when compared to the simplified representation of the \gls{WG} in the PowerFactory model. The results in terms of short-term voltage stability and reactive current injection obtained for the 66 kV \gls{HVAC} network are in line with the results from previous studies with \gls{DVC} implemented in Type-4 \gls{WG}s connected to a 33 kV \gls{HVAC} network as in \cite{korai_dynamic_2019}.    
 
 \paragraph{\textcolor{blue}{Research Question 3 : How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore \gls{MMC}s within a multi-gigawatt offshore transmission network?}}
 
-\paragraph{} Four sets of \gls{OWF}s are connected in parallel to a common bus to which the two \gls{MMC}s are connected. In the steady-state operation, the grid forming \gls{MMC}-1 provides the voltage reference, \gls{MMC}-2 and \gls{DVC} follow this reference. During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s. The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in the \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. The \gls{DVC} in this case also contributes to the reactive current injection in case of islanding. The operation of the network remains stable during severe perturbations such as disconnection of one set of \gls{OWF} and three-phase line to ground fault in the middle of any \gls{HVAC} cable.
+\paragraph{} Due to the urging need to move for large scale offshore networks with the currently available technology, a modified hybrid layout is implemented for the development of a 2 GW offshore network. The layout contains the connection of four sets of \gls{OWF}s connected to a common bus to which two \gls{MMC}s working in parallel are connected. To tackle the technical challenges related to voltage and frequency control in offshore islanded networks, all the four \gls{OWF}s are modelled with the implemented \gls{DVC}. This is done by modularly connecting the single \gls{OWF} model with implemented \gls{DVC} developed in Chapter \ref{3}. To provide the voltage reference during steady-state operation, one of the \gls{MMC}s (\gls{MMC}-1) is operated in grid forming (V/F control) and to maintain the flow of power in the network, \gls{MMC}-2 is operated with grid following (active power control) behaviour. %During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s.
+The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. One of dynamic conditions tested is the disconnection of one set of \gls{OWF}. In such a situation, it is observed that the network remains stable and the power flowing through \gls{MMC}-1 reduces as it is working in grid forming control. Another dynamic event tested is the three-phase fault in one of the \gls{HVAC} cables. A circuit breaker logic is modelled to isolate the \gls{OWF} from the network when the fault occurs in the corresponding \gls{HVAC} cable. It is observed that the operation of the entire network remains stable and after the circuit breaker is opened, islanding the \gls{OWF}, the \gls{DVC} in the corresponding \gls{OWF} provides reactive current injection to the fault location.
 
 \paragraph{\textcolor{blue}{Research Question 4 : How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in parallel operation?}}
 
-\paragraph{} The \gls{OWF}s with \gls{DVC} when working in parallel have similar profiles for the voltage and currents in steady-state and dynamic conditions. During the disconnection of one set of \gls{OWF}, the \gls{DVC}s in the rest of the \gls{OWF}s together contribute to the power flow in the network. Depending on the active power specified in the \gls{MMC} with grid following control (\gls{MMC}-2 in this case), the connected \gls{DVC}s contribute equally to this power if all the \gls{OWF}s generate the same amount of power. This provides a stabilized operation in terms of voltage and power flow in the network during all conditions.  
+\paragraph{} The four \gls{OWF}s with implemented \gls{DVC} are connected to a common \gls{MMC} bus in the 2 GW offshore network. This makes the \gls{OWF}s to be working in parallel configuration. The voltage and current profiles at the \gls{PCC}s of all the \gls{OWF}s are similar in steady-state since all the four \gls{OWF}s are modelled to generate equal amount of power. During the dynamic conditions such as the disconnection of one set of \gls{OWF}, it is observed that the power generated from other \gls{OWF}s connected to the network compensate for the loss of the disconnected \gls{OWF} by providing a slightly higher voltage at the corresponding \gls{PCC}s. Depending on the active power reference specified in the \gls{MMC} with grid following control (\gls{MMC}-2 in this case), the connected \gls{DVC}s contribute equally to this power since all the \gls{OWF}s generate the same amount of power. Similar results are attained for another dynamic event of a three-phase fault in any \gls{HVAC} cable. This shows the well-ordered coordination between the \gls{OWF}s in terms of short-term voltage stability and power flow in the network during all conditions.  
 
 \section{Recommendations for Future Work}
 Having successfully achieved the defined goals for this thesis and based on the studies performed, the author provides recommendations in the following section:  
 \begin{itemize}
-    \item The availability of additional NovaCor processor at TU Delft could be fully utilized to scale up the model to a capacity of 4 GW by accordingly connecting \gls{WG}s and \gls{MMC}s in a modular approach. The practical scenario of multi-terminal network can be implemented and the performance of the \gls{WG}s with \gls{DVC} can be analyzed.
+    \item The availability of additional NovaCor processor at TU Delft could be fully utilized to scale up the model to a capacity of 4 GW by accordingly connecting \gls{WG}s and \gls{MMC}s in a modular approach. The practical scenario of multi-terminal \gls{AC} network can be implemented and the performance of the \gls{WG}s with \gls{DVC} can be analyzed.
     \item The present model of \gls{DVC} is applicable for three-phase fault analysis. Analysis can be extended for single-phase faults that are more common to occur in the real scenario by developing a negative sequence control loop for the \gls{DVC}.
-    \item After performing a techno-economic study, various other network topologies can be researched on and tested with the implemented \gls{DVC} to bring out the cost-benefit feature for the industry experts. 
-    \item The integration of the onshore converter station to the system by removing the \gls{DC} sources from the present model can be accomplished and extensive fault analysis can be performed in the \gls{MMC}-\gls{HVDC} network.
+    \item Various other network topologies can be researched on and tested with the implemented \gls{DVC} to investigate the cost-benefit feature for the industry experts. 
+    \item The integration of the onshore converter station to the offshore network by removing the \gls{DC} sources from the present model can be accomplished and extensive fault analysis can be performed in the \gls{MMC}-\gls{HVDC} network.
     \item The practicality of the controller can be tested by performing Hardware In Loop testing of the implemented \gls{DVC} in a properly set-up test bench.
 \end{itemize}
